--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>📋Listado de mascotas</h2>
 
     <!-- Tabla -->
-    <table border="1" cellpadding="8" cellspacing="0" align="center">
+    <table border="1" width="80%" cellpadding="8" cellspacing="0" align="center">
         <caption><b>Registro Actual de Mascotas</b></caption>
         <thead>
             <tr>
@@ -62,7 +62,7 @@
     <h2>➕ Agregar Nueva Mascota</h2>
 
     <!-- Formulario -->
-    <form>
+    <form aling="center">
       <fieldset>
         <legend><b>Datos de la Mascota</b></legend>
         <label>Nombre:</label>
